--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-    <nav>
+    <!-- <nav>
         <ul>
            <li><a href="homme.html">Home</a></li>
             <li><a href="programmes.html">Programmes</a></li>
@@ -17,7 +17,7 @@
             <li><a href="evenements.html">Evenements</a></li>
             <li><a href="blog.html">Blog</a></li>
          </ul>
-    </nav>
+    </nav> -->
    </header> 
     <div class="bg">       
              <img src="img-landing/g16 1.png" alt="bakeli" class="bakeli"><br><br>
