--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <div class="iconimg">
                              <img src="img-landing/digital-marketing 2.png" alt="">                        
                                 <h2>marketink digital </h2>                                 
-                                  <p>augue tellus in at  odio velit diam. <br>Fringilla sagittis facilisi ur </p>                                               
+                                  <p>augue telluhjhj kjhkvz at  odio velit diam. <br>Fringilla sagittis facilisi ur </p>                                               
                          </div>
                      </div>
                        <div class="bakeli2">
